feat: Update documentation
